# SilverAi

./: README.md  demo.py  pyproject.toml
.github/workflows/: ci.yaml  codeql.yml  release.yml
src/silver_ai/: core.py  rules.py
tests/: test_core.py  test_rules.py
