[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "silver-ai"
version = "0.1.0"
description = "Deterministic State-Guardrails for Agentic Hardware"
authors = ["Goh Chun Lin <chunlin@live.com.sg>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "silver_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.3.0"

# --- Ruff Configuration (Linting + Security) ---
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort, S: bandit (security)
select = ["E", "F", "I", "S"]
ignore = []

# Exclude security checks in tests (asserts are fine in tests)
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]